# django-docker-test

./: .gitignore  local.Dockerfile  manage.py  pyproject.toml
app/: urls.py  wsgi.py
app/core/: apps.py  models.py
config/app_settings/: settings.py
config/app_settings/local/: settings.py
config/docker/: local-compose.yml
