[project]
name = "django-test"
version = "0.1.0"
description = ""
authors = [
    {name = "Dima", email = "1988maksyutenko@gmail.com"},
]
dependencies = [
    "django>=4.0.1",
    "psycopg2-binary>=2.9.3",
    "psycopg2>=2.9.3",
    "djangorestframework>=3.13.1",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[project.urls]
homepage = ""

[project.optional-dependencies]
[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "django-silk>=4.2.0",
]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
